- UI Assist Settings:
  1. Assist - For EMU, addnew new `manual` assist option which will make toons use `/assist` command instead of relying on assist roles.
- UI Burn Settings:
  1. New quick burn, long burn, full burn buttons. Didn't really finish implementing these, there is basically just full burn.
- UI Pull Settings:
  1. Added pull method, swap between melee, ranged, spell, custom function for class.
- UI Debug Settings:
  1. New restart AQO button to restart the lua script
  2. New update AQO button to download new aqo.zip from GitHub EMU branch.
  3. New View Ability Lists button which opens a window that shows all the class abilities and such that are loaded and may be used.
- Commands: Many new commands, utility commands and such. Refer to the docs or help command.
- Buff Begging: See the docs on buff request support
- Fleshed out some more abilities for most classes for EMU
- Many internal changes I've made no attempt to keep track of

# 2022/09/29
- So much change, where to begin
- Trying to take this and make it run on EMU

# 2022/05/20
- pull and tank for bard, mainly for farm stuff

# 2022/02/27
- lots of pull changes

# 2022/02/16
- Refactor some spell cast validation for spells, aa, items, discs

# 2022/02/13
- Pull path length checking
- Tweak ranger positioning checking for nearby mobs

# 2022/02/12
- Group watch settings

# 2022/02/10
- Bunch of fixes around pulling and other things
- Pull ignore lists
- Named list for burn all named

# 2022/02/07
- Start on an SK implementation.

# 2022/02/06
- UI refactor

# 2022/02/01
- Split mezzing logic out from bard class impl.

# 2022/01/31
- Add more war DPS abilities and split up DPS and tanking abilities.

# Pre-changelog existing
- A months worth of dev around supporting manual, assist, chase, pullertank, tank modes for nec, brd, rng, war classes.
- Refer to commit history prior to 2022-01-31.