@@ -7,6 +7,7 @@ function class.init(_aqo)
     class.classOrder = {'assist', 'cast', 'mash', 'burn', 'recover', 'buff', 'rest'}
     class.SPELLSETS = {standard=1}
     class.initBase(_aqo, 'wiz')
+    class.loadSettings()
 
     class.addSpell('nuke1', {'Draught of Ro', 'Pillar of Fire'})
     --class.addSpell('nuke2', {'Fire Spiral of Al\'Kabor'})
