@@ -19,6 +19,7 @@
 - Buff Begging: See the docs on buff request support
 - Fleshed out some more abilities for most classes for EMU
 - Many internal changes I've made no attempt to keep track of
+- Add cleric reverse ds
 
 # 2022/09/29
 - So much change, where to begin
